--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,63 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+.ratingAnimationYellow {
+    animation: 1.5s 0s 1 fadeFromYellow;
+}
+
+.ratingAnimationWhite {
+    animation: 1.5s 0s 1 fadeFromWhite;
+}
+
+.ratingAnimationToBlack {
+    animation: 1.5s 0s 1 fadeToBlack;
+}
+
+@keyframes fadeInCenter {
+    0% {
+        opacity: 30%;
+        transform: translateY(-40%);
+        color:blue;
+    }
+
+    100% {
+        opacity: 100%;
+
+    }
+}
+
+@keyframes fadeInCenterNoY {
+    0% {
+        opacity: 0%;
+    }
+
+    100% {
+        opacity: 100%;
+
+    }
+}
+
+@keyframes fadeFromYellow{
+    0% { background-color: yellow;
+        color:yellow;
+    }
+100% { background-color: none; 
+    color:white;}
+}
+
+@keyframes fadeFromWhite{
+    0% { background-color: white;
+
+     }
+100% { background-color: none; }
+}
+
+@keyframes fadeToBlack{
+    0% { background-color: none;
+
+     }
+100% { background-color: black; }
+}
