--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,8 @@ select::-webkit-scrollbar-thumb {
   
   @keyframes price-fade-up {
   /* 0% { background-color: lightgreen; */
-    /* 0% { background-color: yellow; */
-      0% { background-color: lime;
+    0% { background-color: yellow;
+      /* 0% { background-color: lime; */
 /* color:lime; */
   }
 100% { background-color: none; 
@@ -42,8 +42,8 @@ select::-webkit-scrollbar-thumb {
   
   @keyframes price-fade-down {
     /* 0% { background-color: lightcoral; */
-        /* 0% { background-color: yellow; */
-          0% { background-color: red;
+        0% { background-color: yellow;
+          /* 0% { background-color: red; */
           /* color:red; */
 
     }
